[project]
name = "pagerduty"
version = "6.0.0"
description = "Clients for PagerDuty's Public APIs"
requires-python = ">=3.6"
dependencies = ["httpx"]
maintainers = [
  {name = "Demitri Morgan", email = "demitri@pagerduty.com"},
  {name = "Mandi Walls", email = "mwalls@pagerduty.com"},
  {name = "PagerDuty Customer Support", email = "support@pagerduty.com"}
]

[project.scripts]
pagerduty = "pagerduty.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pagerduty"]

[project.urls]
Documentation = "https://pagerduty.github.io/python-pagerduty"
Repository =  "https://github.com/PagerDuty/python-pagerduty"
PyPI = "https://pypi.org/project/pagerduty"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.0.17",
]

[tool.ruff]
# Set the maximum line length to 79
line-length = 79
