[project]
name = "pagerduty"
version = "6.1.0"
description = "Clients for PagerDuty's Public APIs"
requires-python = ">=3.6"
dependencies = ["httpx"]
maintainers = [
  {name = "Demitri Morgan", email = "demitri@pagerduty.com"},
  {name = "Mandi Walls", email = "mwalls@pagerduty.com"},
  {name = "PagerDuty Customer Support", email = "support@pagerduty.com"}
]

[project.scripts]
pagerduty = "pagerduty.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pagerduty"]

[project.urls]
Documentation = "https://pagerduty.github.io/python-pagerduty"
Repository =  "https://github.com/PagerDuty/python-pagerduty"
PyPI = "https://pypi.org/project/pagerduty"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff",
    "sphinx",
    "sphinxcontrib-websupport",
    "sphinx-rtd-theme",
    "twine",
    "virtualenv",
]

[tool.ruff]
# Set the maximum line length to 79
line-length = 79

[tool.ruff.lint]
ignore = [
  "E731" # In the author's opinion it is sometimes clearer to assign lambdas to variables than define nested functions
]

[tool.uv.build-backend]
module-name="pagerduty"
module-root=""
